--- a/src/components/filmListStyle.css
+++ b/src/components/filmListStyle.css
@@ -43,3 +43,18 @@ h1 {
     flex-direction: column;
     align-items: center;
 }
+
+#film-stats {
+    padding-top: 2%;
+    text-align: center;
+    
+}
+
+.singleFilm-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center; 
+
+    padding: 0 10%;
+}
